--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@nestjs/typeorm": "^9.0.1",
+    "pg": "^8.10.0",
+    "typeorm": "^0.3.15",
+    "nestjs-typeorm-paginate": "^4.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
